--- a/Responsive Website/index.html
+++ b/Responsive Website/index.html
@@ -12,10 +12,12 @@
 <!--Menu Button-->
 
 <body>
-
+    <!---->
     <div class="topbar">
         <ul>
-            <li id="highlight">514-829-2002&nbsp;&nbsp;&nbsp;</li>
+            <a href="tel:514-829-2002">
+                <li>514-829-2002&nbsp;&nbsp;&nbsp;</li>
+            </a>
             <li>BOOK YOUR EVENT TODAY:&nbsp;</li>
 
         </ul>
@@ -32,9 +34,11 @@
         <!--Menu Links-->
         <div class="container">
             <ul class="nav-links">
-                <li><a href="#About">About</a></li>
-                <li><a href="#Events">Events</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -44,9 +48,10 @@
         <!--Website Homepage-->
         <div>
             <section id="home" class="landing">
-                <img src="./img/Homepage%20Logo.png" alt="Company Homepage Logo" class="respo" />
+                <img src="./img/Homepage%20Logo.png" alt="Company Homepage Logo" />
             </section>
         </div>
+
         <!--Website About page-->
         <div>
             <section id="about">
@@ -56,26 +61,46 @@
                 </p>
             </section>
         </div>
+
         <!--Website Event page-->
-        <section id="events">
+        <div>
 
-            <img src="./img/Promo1.JPG" alt="PromoPic" class="promoimage" />
+            <section id="events">
+                <a href="https://www.eventbrite.ca/e/the-yannis-papas-show-featuring-mrpanos-with-special-guest-jim-dailakis-tickets-89930128435?aff=ebdssbeac" target="_blank">
 
-            <!--<div class="promodes">
-                <p class="desalign">G.G.N. Productions presents a Laval based comedy show that will take place on May 15, 2020. Greek YouTube sensation Yannis Pappas, (as the Greek stereotype Mr. Panos) and Australian Greek comedian Jim Dailakis (who performed in the Just For Laughs Festival this past summer). The Yannis Pappas Show will be held at the Embassy Plaza (1003 Boulevard Curé-Labelle, Laval, QC H7V 2V6). This event will start at 7:30 PM and will end at 11:30 PM.</p>
-            </div>-->
+                    <img src="./img/Promo1.png" alt="PromoPic" class="promoimage" />
 
-        </section>
+                </a>
+
+                <!--<div class="promodes">
+                <p class="desalign">G.G.N. Productions presents a Laval based comedy show that will take place on May 15, 2020. Greek YouTube sensation Yannis Pappas, (as the Greek stereotype Mr. Panos) and Australian Greek comedian Jim Dailakis. The Yannis Pappas Show will be held at the Embassy Plaza (1003 Boulevard Curé-Labelle, Laval, QC H7V 2V6). This event will start at 7:30 PM and will end at 11:30 PM.</p>
+                </div>-->
+            </section>
+
+        </div>
+
+
+        <div>
+            <section id="sponsors">
+                <h1>Sponsors</h1>
+            </section>
+        </div>
+
 
         <!--Website Contact page-->
-        <section id="contact">
-            <a href="mailto:groupe.ggn@gmail.com">Contact</a>
-        </section>
+        <div>
+            <section id="contact">
+                <a href="./Contact.html">Contact Us</a>
+                <!--<a href="mailto:groupe.ggn@gmail.com">Contact Us</a>-->
+            </section>
+        </div>
+
     </div>
+
     <!--JS Menu Animation-->
     <script src="./js/app.js"></script>
 
-    <!--JS Hamburger Animation-->
+    <!--JS Hamburger X Animation-->
     <script>
         function myFunction(x) {
             x.classList.toggle("change");
@@ -85,8 +110,9 @@
 
     <!--Website Footer-->
     <div id="footer">
-        <p>© GGN Productions 2020</p>
+        <p>©Groupe GGN 2020</p>
     </div>
+
 </body>
 
 </html>
